@@ -60,6 +60,7 @@ xx0y2009 (v2.6.0) -** stable release **-
 		   value, either the default value or e.g. the JACK 
 		   system sampling rate; updated documentation, see
 		   ecasound(1)
+        - changed: minor update ecasound's "--help"
 	- fixed: do not limit max-gain reported by '-ev' to [1,max]
 		 value range
         - fixed: avoid denormal numbers in '-ete' (leads to unusually
